[tool.poetry]
name = "fluidexec"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Peifeng <peifeng@umich.edu>"]
readme = "README.md"
repository = "https://github.com/SymbioticLab/fluid"
description = "Resource-aware hyperparameter tuning execution engine"

packages = [
    { include = "fluid" },
    { include = "workloads", format = "sdist" },
]
include = [
    "LINCENSE"
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"

ray = {version = "0.8.5", extras = ["tune"]}
numpy = "*"
requests = "*"

# optional dependencies used by exp workloads
hpbandster = { version = "*", optional = true }
ConfigSpace = { version = "*", optional = true }
pandas = { version = "*", optional = true }

[tool.poetry.extras]
exp = [
    "hpbandster",
    "ConfigSpace",
    "pandas",
]

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.4b0"
isort = "^5.8.0"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
log_level = "DEBUG"

[tool.isort]
profile = "black"
multi_line_output = 3
